Mise à jour des chemins des images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <link rel="icon" href="/images/favicon/mountain1.ico" type="image/x-icon" />
+    <link
+      rel="icon"
+      href="/portfolio/images/favicon/mountain1.ico"
+      type="image/x-icon"
+    />
   </head>
 
   <body>
@@ -65,7 +69,7 @@
       <!-- Section Biographie -->
       <section id="biographie" class="scroll-blur">
         <img
-          src="/images/image_profil/Photo d'identité 1.png"
+          src="/portfolio/images/image_profil/Photo d'identité 1.png"
           alt="image de profil"
           class="image-profil"
         />
@@ -107,7 +111,7 @@
           </ul>
         </div>
         <img
-          src="/images/logos_competences/code-your-website-in-html-css-php-javascript.png"
+          src="/portfolio/images/logos_competences/code-your-website-in-html-css-php-javascript.png"
           alt="Description de l'image"
           class="image-cadre"
         />
@@ -120,27 +124,33 @@
         <div class="conteneur-vignettes">
           <div class="vignette-projet" data-projet="projet1">
             <div class="image-container">
-              <img src="/images/screenshots/mh.png" alt="Projet 1" />
+              <img src="/portfolio/images/screenshots/mh.png" alt="Projet 1" />
             </div>
             <h3>Site Statique</h3>
           </div>
           <!-- Ajoutez plus de vignettes de projets ici -->
           <div class="vignette-projet" data-projet="projet2">
             <div class="image-container">
-              <img src="/images/screenshots/weatherapp.png" alt="Projet 2" />
+              <img
+                src="/portfolio/images/screenshots/weatherapp.png"
+                alt="Projet 2"
+              />
             </div>
             <h3>Application Météo</h3>
           </div>
           <div class="vignette-projet" data-projet="projet3">
             <div class="image-container">
-              <img src="/images/vignettes/vignette_3_JS.png" alt="Projet 3" />
+              <img
+                src="/portfolio/images/vignettes/vignette_3_JS.png"
+                alt="Projet 3"
+              />
             </div>
             <h3>Exercices Javascript</h3>
           </div>
           <div class="vignette-projet" data-projet="projet4">
             <div class="image-container">
               <img
-                src="/images/vignettes/vignette_4_NodeJS_2.png"
+                src="/portfolio/images/vignettes/vignette_4_NodeJS_2.png"
                 alt="Projet 4"
               />
             </div>
@@ -149,7 +159,7 @@
           <div class="vignette-projet" data-projet="projet5">
             <div class="image-container">
               <img
-                src="/images/screenshots/jsamazona/jsamazona_1.png"
+                src="/portfolio/images/screenshots/jsamazona/jsamazona_1.png"
                 alt="Projet 5"
               />
             </div>
@@ -158,7 +168,7 @@
           <div class="vignette-projet" data-projet="projet6">
             <div class="image-container">
               <img
-                src="/images/vignettes/les_connexions_old_2.png"
+                src="/portfolio/images/vignettes/les_connexions_old_2.png"
                 alt="Projet 6"
               />
             </div>
@@ -268,7 +278,7 @@
           </p>
         </div>
         <div class="projet-images">
-          <img src="/images/screenshots/mh.png" alt="Projet 1" />
+          <img src="/portfolio/images/screenshots/mh.png" alt="Projet 1" />
         </div>
       </div>
     </div>
@@ -302,7 +312,10 @@
           </p>
         </div>
         <div class="projet-images">
-          <img src="/images/screenshots/weatherapp.png" alt="Projet 2" />
+          <img
+            src="/portfolio/images/screenshots/weatherapp.png"
+            alt="Projet 2"
+          />
         </div>
       </div>
     </div>
@@ -334,7 +347,10 @@
             DOM, les écouteurs d'événements, l'utilisation de l'API Fetch, et
             les premières notions de programmation asynchrone.
           </p>
-          <img src="/images/screenshots/bonus/pokéAPI.png" alt="Projet 3" />
+          <img
+            src="/portfolio/images/screenshots/bonus/pokéAPI.png"
+            alt="Projet 3"
+          />
           <p>
             2. To-do List :
             <br />
@@ -343,7 +359,10 @@
             en Javascript. <br />
             • Manipulation du DOM et gestion du localstorage.
           </p>
-          <img src="/images/screenshots/todo_list.png" alt="Projet 3" />
+          <img
+            src="/portfolio/images/screenshots/todo_list.png"
+            alt="Projet 3"
+          />
           <p>
             3. Drum-Kit :
             <br />
@@ -352,7 +371,10 @@
             de fichiers audio sur une page web. <br />
             • Déclenchement d'événements par clics souris et touches claviers.
           </p>
-          <img src="/images/screenshots/drum_app.png" alt="Projet 3" />
+          <img
+            src="/portfolio/images/screenshots/drum_app.png"
+            alt="Projet 3"
+          />
           <p>
             Bonus - Jeux Javascript :
             <br />
@@ -366,12 +388,12 @@
           <div class="images-bonus">
             <img
               class="image-reduite"
-              src="/images/screenshots/bonus/dichotomie.png"
+              src="/portfolio/images/screenshots/bonus/dichotomie.png"
               alt="Projet 3"
             />
             <img
               class="image-reduite"
-              src="/images/screenshots/bonus/papier_caillou_ciseaux.png"
+              src="/portfolio/images/screenshots/bonus/papier_caillou_ciseaux.png"
               alt="Projet 3"
             />
           </div>
@@ -422,15 +444,15 @@
         </div>
         <div class="projet-images">
           <img
-            src="/images/screenshots/NodeJS_pokemon/code2.png"
+            src="/portfolio/images/screenshots/NodeJS_pokemon/code2.png"
             alt="Projet 4"
           />
           <img
-            src="/images/screenshots/NodeJS_pokemon/insomnia.png"
+            src="/portfolio/images/screenshots/NodeJS_pokemon/insomnia.png"
             alt="Projet 4"
           />
           <img
-            src="/images/screenshots/NodeJS_pokemon/phpmyadmin.png"
+            src="/portfolio/images/screenshots/NodeJS_pokemon/phpmyadmin.png"
             alt="Projet 4"
           />
         </div>
@@ -477,15 +499,15 @@
         </div>
         <div class="projet-images">
           <img
-            src="/images/screenshots/jsamazona/jsamazona_1.png"
+            src="/portfolio/images/screenshots/jsamazona/jsamazona_1.png"
             alt="Projet 5"
           />
           <img
-            src="/images/screenshots/jsamazona/jsamazona_2.png"
+            src="/portfolio/images/screenshots/jsamazona/jsamazona_2.png"
             alt="Projet 5"
           />
           <img
-            src="/images/screenshots/jsamazona/jsamazona_3.png"
+            src="/portfolio/images/screenshots/jsamazona/jsamazona_3.png"
             alt="Projet 5"
           />
         </div>
@@ -527,17 +549,17 @@
         <div class="projet-images">
           <img
             class="projet6-image"
-            src="/images/screenshots/les_connexions/les_connexions_1.png"
+            src="/portfolio/images/screenshots/les_connexions/les_connexions_1.png"
             alt="Projet 6"
           />
           <img
             class="projet6-image"
-            src="/images/screenshots/les_connexions/les_connexions_2.png"
+            src="/portfolio/images/screenshots/les_connexions/les_connexions_2.png"
             alt="Projet 6"
           />
           <img
             class="projet6-image"
-            src="/images/screenshots/les_connexions/les_connexions_3.png"
+            src="/portfolio/images/screenshots/les_connexions/les_connexions_3.png"
             alt="Projet 6"
           />
         </div>
@@ -549,7 +571,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script type="module" src="/js/Gradient.js"></script>
+    <script type="module" src="/portfolio/js/Gradient.js"></script>
     <script type="module" src="/portfolio/js/app.js"></script>
   </body>
 </html>
