--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,11 +21,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <link
-      rel="icon"
-      href="../images/favicon/mountain1.ico"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="images/favicon/mountain1.ico" type="image/x-icon" />
   </head>
 
   <body>
@@ -69,7 +65,7 @@
       <!-- Section Biographie -->
       <section id="biographie" class="scroll-blur">
         <img
-          src="../images/image_profil/Photo d'identité 1.png"
+          src="images/image_profil/Photo d'identité 1.png"
           alt="image de profil"
           class="image-profil"
         />
@@ -111,7 +107,7 @@
           </ul>
         </div>
         <img
-          src="../images/logos_competences/code-your-website-in-html-css-php-javascript.png"
+          src="images/logos_competences/code-your-website-in-html-css-php-javascript.png"
           alt="Description de l'image"
           class="image-cadre"
         />
@@ -124,27 +120,27 @@
         <div class="conteneur-vignettes">
           <div class="vignette-projet" data-projet="projet1">
             <div class="image-container">
-              <img src="../images/screenshots/mh.png" alt="Projet 1" />
+              <img src="images/screenshots/mh.png" alt="Projet 1" />
             </div>
             <h3>Site Statique</h3>
           </div>
           <!-- Ajoutez plus de vignettes de projets ici -->
           <div class="vignette-projet" data-projet="projet2">
             <div class="image-container">
-              <img src="../images/screenshots/weatherapp.png" alt="Projet 2" />
+              <img src="images/screenshots/weatherapp.png" alt="Projet 2" />
             </div>
             <h3>Application Météo</h3>
           </div>
           <div class="vignette-projet" data-projet="projet3">
             <div class="image-container">
-              <img src="../images/vignettes/vignette_3_JS.png" alt="Projet 3" />
+              <img src="images/vignettes/vignette_3_JS.png" alt="Projet 3" />
             </div>
             <h3>Exercices Javascript</h3>
           </div>
           <div class="vignette-projet" data-projet="projet4">
             <div class="image-container">
               <img
-                src="../images/vignettes/vignette_4_NodeJS_2.png"
+                src="images/vignettes/vignette_4_NodeJS_2.png"
                 alt="Projet 4"
               />
             </div>
@@ -153,7 +149,7 @@
           <div class="vignette-projet" data-projet="projet5">
             <div class="image-container">
               <img
-                src="../images/screenshots/jsamazona/jsamazona_1.png"
+                src="images/screenshots/jsamazona/jsamazona_1.png"
                 alt="Projet 5"
               />
             </div>
@@ -162,7 +158,7 @@
           <div class="vignette-projet" data-projet="projet6">
             <div class="image-container">
               <img
-                src="../images/vignettes/les_connexions_old_2.png"
+                src="images/vignettes/les_connexions_old_2.png"
                 alt="Projet 6"
               />
             </div>
@@ -272,7 +268,7 @@
           </p>
         </div>
         <div class="projet-images">
-          <img src="../images/screenshots/mh.png" alt="Projet 1" />
+          <img src="images/screenshots/mh.png" alt="Projet 1" />
         </div>
       </div>
     </div>
@@ -306,7 +302,7 @@
           </p>
         </div>
         <div class="projet-images">
-          <img src="../images/screenshots/weatherapp.png" alt="Projet 2" />
+          <img src="images/screenshots/weatherapp.png" alt="Projet 2" />
         </div>
       </div>
     </div>
@@ -338,7 +334,7 @@
             DOM, les écouteurs d'événements, l'utilisation de l'API Fetch, et
             les premières notions de programmation asynchrone.
           </p>
-          <img src="../images/screenshots/bonus/pokéAPI.png" alt="Projet 3" />
+          <img src="images/screenshots/bonus/pokéAPI.png" alt="Projet 3" />
           <p>
             2. To-do List :
             <br />
@@ -347,7 +343,7 @@
             en Javascript. <br />
             • Manipulation du DOM et gestion du localstorage.
           </p>
-          <img src="../images/screenshots/todo_list.png" alt="Projet 3" />
+          <img src="images/screenshots/todo_list.png" alt="Projet 3" />
           <p>
             3. Drum-Kit :
             <br />
@@ -356,7 +352,7 @@
             de fichiers audio sur une page web. <br />
             • Déclenchement d'événements par clics souris et touches claviers.
           </p>
-          <img src="../images/screenshots/drum_app.png" alt="Projet 3" />
+          <img src="images/screenshots/drum_app.png" alt="Projet 3" />
           <p>
             Bonus - Jeux Javascript :
             <br />
@@ -370,12 +366,12 @@
           <div class="images-bonus">
             <img
               class="image-reduite"
-              src="../images/screenshots/bonus/dichotomie.png"
+              src="images/screenshots/bonus/dichotomie.png"
               alt="Projet 3"
             />
             <img
               class="image-reduite"
-              src="../images/screenshots/bonus/papier_caillou_ciseaux.png"
+              src="images/screenshots/bonus/papier_caillou_ciseaux.png"
               alt="Projet 3"
             />
           </div>
@@ -426,15 +422,15 @@
         </div>
         <div class="projet-images">
           <img
-            src="../images/screenshots/NodeJS_pokemon/code2.png"
+            src="images/screenshots/NodeJS_pokemon/code2.png"
             alt="Projet 4"
           />
           <img
-            src="../images/screenshots/NodeJS_pokemon/insomnia.png"
+            src="images/screenshots/NodeJS_pokemon/insomnia.png"
             alt="Projet 4"
           />
           <img
-            src="../images/screenshots/NodeJS_pokemon/phpmyadmin.png"
+            src="images/screenshots/NodeJS_pokemon/phpmyadmin.png"
             alt="Projet 4"
           />
         </div>
@@ -481,15 +477,15 @@
         </div>
         <div class="projet-images">
           <img
-            src="../images/screenshots/jsamazona/jsamazona_1.png"
+            src="images/screenshots/jsamazona/jsamazona_1.png"
             alt="Projet 5"
           />
           <img
-            src="../images/screenshots/jsamazona/jsamazona_2.png"
+            src="images/screenshots/jsamazona/jsamazona_2.png"
             alt="Projet 5"
           />
           <img
-            src="../images/screenshots/jsamazona/jsamazona_3.png"
+            src="images/screenshots/jsamazona/jsamazona_3.png"
             alt="Projet 5"
           />
         </div>
@@ -531,17 +527,17 @@
         <div class="projet-images">
           <img
             class="projet6-image"
-            src="../images/screenshots/les_connexions/les_connexions_1.png"
+            src="images/screenshots/les_connexions/les_connexions_1.png"
             alt="Projet 6"
           />
           <img
             class="projet6-image"
-            src="../images/screenshots/les_connexions/les_connexions_2.png"
+            src="images/screenshots/les_connexions/les_connexions_2.png"
             alt="Projet 6"
           />
           <img
             class="projet6-image"
-            src="../images/screenshots/les_connexions/les_connexions_3.png"
+            src="images/screenshots/les_connexions/les_connexions_3.png"
             alt="Projet 6"
           />
         </div>
@@ -553,7 +549,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script type="module" src="../js/Gradient.js"></script>
-    <script type="module" src="../js/app.js"></script>
+    <script type="module" src="js/Gradient.js"></script>
+    <script type="module" src="js/app.js"></script>
   </body>
 </html>
