Mise à jour de la biographie

--- a/index.html
+++ b/index.html
@@ -75,20 +75,21 @@
           j’ai entamé mon parcours professionnel avec un diplôme en sciences,
           axé principalement sur la géologie, la géophysique et l'étude de
           l'environnement. Titulaire d'une licence et d'un master dans le
-          domaine scientifique, j'ai consacré quelques années à explorer les
-          mystères de la nature avant de donner une nouvelle orientation à ma
-          carrière en me plongeant dans le monde fascinant du développement web.
-          Après une période d'auto-formation intensive, d'une durée d'un an,
-          j'ai acquis des compétences solides dans le domaine, notamment en
-          HTML, CSS et Javascript.
+          domaine, j'ai consacré quelques années à explorer les mystères de la
+          nature avant de donner une nouvelle orientation à ma carrière en me
+          plongeant dans le monde fascinant du développement web. À la suite
+          d'une année d'auto-formation intensive, j'ai acquis des compétences
+          solides dans le développement frontend, tout en établissant des bases
+          dans le domaine du backend.
           <br />
           <br />
-          Aujourd'hui, en tant que développeur web full stack, je m'épanouis
-          pleinement dans la création de projets innovants, aussi bien du côté
-          front end que du côté back end. Mon objectif est de continuer à allier
-          mes deux passions, en contribuant activement à des projets qui
-          intègrent les avancées technologiques tout en respectant
-          l'environnement qui m'inspire tant.
+          Aujourd'hui, en tant que développeur web, je m'épanouis pleinement
+          dans la création de projets innovants. Bien que ma principale
+          expertise réside dans le développement frontend, je suis également
+          capable de prendre en charge des projets full stack. Mon objectif est
+          de continuer à allier mes deux passions, en contribuant activement à
+          des projets qui intègrent les avancées technologiques tout en
+          respectant l'environnement qui m'inspire tant.
         </p>
       </section>
 
