Mise à jour de la biographie 2 - avec la nouvelle version du CV

--- a/index.html
+++ b/index.html
@@ -72,24 +72,21 @@
         <!-- Contenu de la section -->
         <p>
           Passionné par deux domaines distincts - la nature et l'informatique -
-          j’ai entamé mon parcours professionnel avec un diplôme en sciences,
-          axé principalement sur la géologie, la géophysique et l'étude de
-          l'environnement. Titulaire d'une licence et d'un master dans le
-          domaine, j'ai consacré quelques années à explorer les mystères de la
-          nature avant de donner une nouvelle orientation à ma carrière en me
-          plongeant dans le monde fascinant du développement web. À la suite
-          d'une année d'auto-formation intensive, j'ai acquis des compétences
-          solides dans le développement frontend, tout en établissant des bases
-          dans le domaine du backend.
+          j’ai entamé mon parcours professionnel dans les sciences de la terre
+          et de l'environnement. Titulaire d'un master 2 avec mention, j'ai
+          consacré quelques années à étudier les phénomènes géologiques avant de
+          donner une nouvelle orientation à ma carrière en me plongeant dans le
+          monde fascinant du développement web. Suite à une année
+          d'auto-formation intensive, j'ai acquis des compétences solides dans
+          le développement frontend, tout en établissant des bases dans le
+          domaine du backend.
           <br />
           <br />
-          Aujourd'hui, en tant que développeur web, je m'épanouis pleinement
-          dans la création de projets innovants. Bien que ma principale
-          expertise réside dans le développement frontend, je suis également
-          capable de prendre en charge des projets full stack. Mon objectif est
-          de continuer à allier mes deux passions, en contribuant activement à
-          des projets qui intègrent les avancées technologiques tout en
-          respectant l'environnement qui m'inspire tant.
+          Aujourd'hui, en tant que développeur web full stack, je m'épanouis
+          pleinement dans la création de projets innovants. Mon objectif est de
+          continuer à allier mes deux passions, en contribuant activement à des
+          projets qui intègrent les avancées technologiques tout en respectant
+          l'environnement qui m'inspire tant.
         </p>
       </section>
 
