Mise à jour de la biographie 3 - correction des espacements

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
           et de l'environnement. Titulaire d'un master 2 avec mention, j'ai
           consacré quelques années à étudier les phénomènes géologiques avant de
           donner une nouvelle orientation à ma carrière en me plongeant dans le
-          monde fascinant du développement web. Suite à une année
-          d'auto-formation intensive, j'ai acquis des compétences solides dans
-          le développement frontend, tout en établissant des bases dans le
-          domaine du backend.
+          monde fascinant du développement web. <br />
+          Suite à une année d'auto-formation intensive, j'ai acquis des
+          compétences solides dans le développement frontend, tout en
+          établissant des bases dans le domaine du backend.
           <br />
           <br />
           Aujourd'hui, en tant que développeur web full stack, je m'épanouis
