Mise à jour de la biographie 4 - correction des espacements 2

--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
           et de l'environnement. Titulaire d'un master 2 avec mention, j'ai
           consacré quelques années à étudier les phénomènes géologiques avant de
           donner une nouvelle orientation à ma carrière en me plongeant dans le
-          monde fascinant du développement web. <br />
+          monde fascinant du développement web.
+          <br />
+          <br />
           Suite à une année d'auto-formation intensive, j'ai acquis des
           compétences solides dans le développement frontend, tout en
-          établissant des bases dans le domaine du backend.
-          <br />
-          <br />
-          Aujourd'hui, en tant que développeur web full stack, je m'épanouis
-          pleinement dans la création de projets innovants. Mon objectif est de
-          continuer à allier mes deux passions, en contribuant activement à des
-          projets qui intègrent les avancées technologiques tout en respectant
+          établissant des bases dans le domaine du backend. Aujourd'hui, en tant
+          que développeur web full stack, je m'épanouis pleinement dans la
+          création de projets innovants. Mon objectif est de continuer à allier
+          mes deux passions, en contribuant activement à des projets qui
+          intègrent les avancées technologiques tout en respectant
           l'environnement qui m'inspire tant.
         </p>
       </section>
