Mise à jour de certains aspects visuels : couleur des titres, photo d'id, suppresion de l'image de l'homepage, harmonisation

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- Section Biographie -->
       <section id="biographie" class="scroll-blur">
         <img
-          src="images/image_profil/Photo d'identité 1.png"
+          src="images/image_profil/Photo pro 3.jpg"
           alt="image de profil"
           class="image-profil"
         />
@@ -188,7 +188,7 @@
                   d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z"
                 />
               </svg>
-              tommyepal@gmail.com
+              tommyepal.pro@gmail.com
             </a>
           </div>
           <div>
@@ -204,7 +204,7 @@
               </svg>
               Github
             </a>
-            <a href="https://www.linkedin.com/in/tommy-epal-b7350722a/">
+            <a href="www.linkedin.com/in/tommy-epal-b7350722a">
               <svg
                 class="svg-icon"
                 xmlns="http://www.w3.org/2000/svg"
