Mise à jour : nouvelle section prestation, actualisation de la navbar et de son comporterment pour la nouvelle section, rédaction du détail des vignettes, ajustement de leurs comportements comme le fait de pouvoir les fermer en cliquant à côté, etc. Mise à jour de certains visuels comme les hover du titre, etc.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul>
           <li><a class="nav-link" href="#accueil">/Home</a></li>
           <li><a class="nav-link" href="#biographie">/Biographie</a></li>
-          <li><a class="nav-link" href="#competences">/Compétences</a></li>
+          <li><a class="nav-link" href="#prestation">/Prestations</a></li>
           <li><a class="nav-link" href="#projets">/Projets</a></li>
           <li><a class="nav-link" href="#contact">/Contact</a></li>
         </ul>
@@ -90,17 +90,16 @@
         </p>
       </section>
 
-      <!-- Section Compétences -->
+      <!-- Section Compétences 
       <section id="competences" class="scroll-blur">
         <div class="contenu-competences">
           <h2>Compétences</h2>
-          <!-- Contenu de la section -->
           <ul>
-            <li><i class="fas fa-code"></i>HTML5</li>
-            <li><i class="fas fa-code"></i>CSS3</li>
-            <li><i class="fas fa-code"></i>JavaScript</li>
+            <li><i class="fas fa-code"></i>HTML5 - CSS3 - JavaScript</li>
+            <li><i class="fas fa-code"></i>React</li>
             <li><i class="fas fa-code-branch"></i>NodeJs</li>
             <li><i class="fas fa-database"></i>Gestion de base de données</li>
+            <li><i class="fas fa-pen"></i>Wordpress</li>
             <li><i class="fas fa-pen"></i>Figma</li>
           </ul>
         </div>
@@ -109,6 +108,90 @@
           alt="Description de l'image"
           class="image-cadre"
         />
+      </section>
+-->
+
+      <!-- Section Prestation -->
+      <section id="prestation" class="scroll-blur">
+        <h2>Prestations</h2>
+        <div class="prestation-container">
+          <div class="prestation-card" id="solution-simple">
+            <i class="fas fa-cogs prestation-icon"></i>
+            <h3 class="prestation-title">Solution Simple</h3>
+            <p class="prestation-text">
+              Une solution rapide et efficace pour vos besoins de base en
+              développement web.
+            </p>
+          </div>
+          <div class="prestation-card" id="solution-personnalisee">
+            <i class="fas fa-tools prestation-icon"></i>
+            <h3 class="prestation-title">Solution Personnalisée</h3>
+            <p class="prestation-text">
+              Une solution sur mesure adaptée à vos exigences spécifiques et à
+              vos projets complexes.
+            </p>
+          </div>
+        </div>
+        <div class="prestation-details" id="details-simple">
+          <h3>Pour qui ?</h3>
+          <p>
+            - Petites entreprises, entrepreneurs ou indépendants avec un budget
+            limité. <br />
+            - Idéal pour les sites vitrines, blogs ou pages de présentation avec
+            peu de mise à jour ou de personnalisation complexe. <br />
+            <br />
+          </p>
+          <h3>Ce que je propose :</h3>
+          <p>
+            - Création de sites rapides, élégants et professionnels grâce à
+            WordPress. <br />
+            - Mise en place d’un thème adapté à votre activité et
+            personnalisable.<br />
+            - Intégration des fonctionnalités essentielles (formulaires,
+            galeries, pages de contact, etc.).<br />
+            - Optimisation de la performance et du SEO pour une visibilité
+            accrue.<br />
+            - Formation de base pour gérer votre site en autonomie après
+            livraison.<br />
+          </p>
+          <br />
+          <h3>Avantages :</h3>
+          <p>
+            - Solution rapide et économique. <br />
+            - Idéal pour un lancement rapide de votre activité en ligne.
+          </p>
+        </div>
+        <div class="prestation-details" id="details-personnalisee">
+          <h3>Pour qui ?</h3>
+          <p>
+            - Startups, PME ou projets nécessitant des fonctionnalités complexes
+            et un haut niveau de personnalisation. <br />
+            - Idéal pour les plateformes web interactives, applications web ou
+            sites nécessitant une intégration avancée avec des API ou des bases
+            de données. <br />
+            <br />
+          </p>
+          <h3>Ce que je propose :</h3>
+          <p>
+            - Développement sur mesure avec la stack MERN (MongoDB, Express,
+            React, Node.js). <br />
+            - Création d’un design entièrement personnalisé en fonction de vos
+            besoins. <br />
+            - Développement de fonctionnalités spécifiques (espace membre,
+            e-commerce, tableau de bord interactif, etc.). <br />
+            - Gestion avancée des données grâce à une base MongoDB sécurisée et
+            performante. <br />
+            - Accompagnement sur le long terme : maintenance, évolutions et
+            mises à jour.<br />
+            <br />
+          </p>
+          <h3>Avantages :</h3>
+          <p>
+            Un site ou une application unique, parfaitement adapté à vos
+            besoins. Idéal pour des projets nécessitant des performances élevées
+            et une évolutivité.
+          </p>
+        </div>
       </section>
 
       <!-- Section Projets -->
