Mise à jour des styles et amélioration de l'ergonomie des cartes de prestation

--- a/index.html
+++ b/index.html
@@ -133,64 +133,93 @@
           </div>
         </div>
         <div class="prestation-details" id="details-simple">
-          <h3>Pour qui ?</h3>
-          <p>
-            - Petites entreprises, entrepreneurs ou indépendants avec un budget
-            limité. <br />
-            - Idéal pour les sites vitrines, blogs ou pages de présentation avec
-            peu de mise à jour ou de personnalisation complexe. <br />
-            <br />
-          </p>
-          <h3>Ce que je propose :</h3>
-          <p>
-            - Création de sites rapides, élégants et professionnels grâce à
-            WordPress. <br />
-            - Mise en place d’un thème adapté à votre activité et
-            personnalisable.<br />
-            - Intégration des fonctionnalités essentielles (formulaires,
-            galeries, pages de contact, etc.).<br />
-            - Optimisation de la performance et du SEO pour une visibilité
-            accrue.<br />
-            - Formation de base pour gérer votre site en autonomie après
-            livraison.<br />
-          </p>
-          <br />
-          <h3>Avantages :</h3>
-          <p>
-            - Solution rapide et économique. <br />
-            - Idéal pour un lancement rapide de votre activité en ligne.
-          </p>
+          <h3><i class="fas fa-user"></i> Pour qui ?</h3>
+          <ul>
+            <li>
+              Petites entreprises, entrepreneurs ou indépendants avec un budget
+              limité.
+            </li>
+            <li>
+              Idéal pour les sites vitrines, blogs ou pages de présentation avec
+              peu de mise à jour ou de personnalisation complexe.
+            </li>
+          </ul>
+          <h3><i class="fas fa-cogs"></i> Ce que je propose</h3>
+          <ul>
+            <li>
+              Création de sites rapides, élégants et professionnels grâce à
+              WordPress.
+            </li>
+            <li>
+              Mise en place d’un thème adapté à votre activité et
+              personnalisable.
+            </li>
+            <li>
+              Intégration des fonctionnalités essentielles (formulaires,
+              galeries, pages de contact, etc.).
+            </li>
+            <li>
+              Optimisation de la performance et du SEO pour une visibilité
+              accrue.
+            </li>
+            <li>
+              Formation de base pour gérer votre site en autonomie après
+              livraison.
+            </li>
+          </ul>
+          <h3><i class="fas fa-check-circle"></i> Avantages</h3>
+          <ul>
+            <li>Solution rapide et économique.</li>
+            <li>Idéal pour un lancement rapide de votre activité en ligne.</li>
+          </ul>
         </div>
         <div class="prestation-details" id="details-personnalisee">
-          <h3>Pour qui ?</h3>
-          <p>
-            - Startups, PME ou projets nécessitant des fonctionnalités complexes
-            et un haut niveau de personnalisation. <br />
-            - Idéal pour les plateformes web interactives, applications web ou
-            sites nécessitant une intégration avancée avec des API ou des bases
-            de données. <br />
-            <br />
-          </p>
-          <h3>Ce que je propose :</h3>
-          <p>
-            - Développement sur mesure avec la stack MERN (MongoDB, Express,
-            React, Node.js). <br />
-            - Création d’un design entièrement personnalisé en fonction de vos
-            besoins. <br />
-            - Développement de fonctionnalités spécifiques (espace membre,
-            e-commerce, tableau de bord interactif, etc.). <br />
-            - Gestion avancée des données grâce à une base MongoDB sécurisée et
-            performante. <br />
-            - Accompagnement sur le long terme : maintenance, évolutions et
-            mises à jour.<br />
-            <br />
-          </p>
-          <h3>Avantages :</h3>
-          <p>
-            Un site ou une application unique, parfaitement adapté à vos
-            besoins. Idéal pour des projets nécessitant des performances élevées
-            et une évolutivité.
-          </p>
+          <h3><i class="fas fa-user"></i> Pour qui ?</h3>
+          <ul>
+            <li>
+              Startups, PME ou projets nécessitant des fonctionnalités complexes
+              et un haut niveau de personnalisation.
+            </li>
+            <li>
+              Idéal pour les plateformes web interactives, applications web ou
+              sites nécessitant une intégration avancée avec des API ou des
+              bases de données.
+            </li>
+          </ul>
+          <h3><i class="fas fa-cogs"></i> Ce que je propose</h3>
+          <ul>
+            <li>
+              Développement sur mesure avec la stack MERN (MongoDB, Express,
+              React, Node.js).
+            </li>
+            <li>
+              Création d’un design entièrement personnalisé en fonction de vos
+              besoins.
+            </li>
+            <li>
+              Développement de fonctionnalités spécifiques (espace membre,
+              e-commerce, tableau de bord interactif, etc.).
+            </li>
+            <li>
+              Gestion avancée des données grâce à une base MongoDB sécurisée et
+              performante.
+            </li>
+            <li>
+              Accompagnement sur le long terme : maintenance, évolutions et
+              mises à jour.
+            </li>
+          </ul>
+          <h3><i class="fas fa-check-circle"></i> Avantages</h3>
+          <ul>
+            <li>
+              Un site ou une application unique, parfaitement adapté à vos
+              besoins.
+            </li>
+            <li>
+              Idéal pour des projets nécessitant des performances élevées et une
+              évolutivité.
+            </li>
+          </ul>
         </div>
       </section>
 
