Ajout des media queries +  menu hamburger avec animation et suppression de la croix HTML

--- a/index.html
+++ b/index.html
@@ -52,6 +52,21 @@
           <li><a class="nav-link" href="#contact">/Contact</a></li>
         </ul>
       </nav>
+      <!-- Bouton pour ouvrir/fermer le menu -->
+      <button class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+
+      <!-- Menu déroulant -->
+      <div class="menu">
+        <a href="#accueil" style="--order: 1">Accueil</a>
+        <a href="#biographie" style="--order: 2">Biographie</a>
+        <a href="#prestation" style="--order: 3">Prestations</a>
+        <a href="#projets" style="--order: 4">Projets</a>
+        <a href="#contact" style="--order: 5">Contact</a>
+      </div>
     </div>
     <div id="contenu">
       <!-- Section Accueil -->
